tests/ui/traits/non_lifetime_binders/bad-copy-cond.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bad-copy-cond.rs:1:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/bad-copy-cond.rs:7:5
   |
LL |     foo();
   |     ^^^^^ the trait `Copy` is not implemented for `T`
   |
note: required by a bound in `foo`
  --> $DIR/bad-copy-cond.rs:4:26
   |
LL | fn foo() where for<T> T: Copy {}
   |                          ^^^^ required by this bound in `foo`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
